[package]
name = "game-maps"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "game_maps_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [ "config-toml" ] }
cmake = "0.1.54"

[dependencies]
tauri = { version = "2", features = [ "config-toml" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
wry = { path = "../src-wry" }
